fixed font and spacing, need to fix Stars comp

--- a/public/style.css
+++ b/public/style.css
@@ -33,8 +33,7 @@ body {
 .movie {
   display: flex;
   flex-flow: column wrap;
-  padding: 1rem;
-  height: 80px;
+  height: 120px;
 }
 
 nav {
